@@ -343,7 +343,12 @@ class Valid_id( object ):
     self.__none_okay = none_okay
 
   def __call__( self, value ):
-    if self.__none_okay and value in ( None, "None", "" ): return None
+    if value in ( None, "None", "" ):
+      if self.__none_okay:
+        return None
+      else:
+        raise ValueError()
+
     if self.ID_PATTERN.search( value ): return str( value )
 
     raise ValueError()
